--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #fbfbfb;
+    background-color: #f3f3f3;
     color: #f0f8ff;
     font-family: sans-serif;
     font-size: 2rem;
@@ -16,7 +16,6 @@ body {
     justify-content: center;
     height: 100vh;
 }
-
 .game-row {
     display: flex;
     gap: 1rem;
